--- a/src/assets/style/abstract/_variable.scss
+++ b/src/assets/style/abstract/_variable.scss
@@ -1,31 +1,32 @@
 @font-face {
-    font-family: TajawalRegular;
-    src: url(../../fonts/Tajawal-Regular.ttf);
+    font-family: OpenSans;
+    src: url(../../fonts/OpenSans-Regular.ttf);
     font-display: swap;
 }
 
 @font-face {
-    font-family: TajawalBold;
-    src: url(../../fonts/Tajawal-Bold.ttf);
+    font-family: OpenSansBold;
+    src: url(../../fonts/OpenSans-Bold.ttf);
     font-display: swap;
 }
 
 //-*----------  START FONTS BASE  ----------*/
 
-$tajawalBold-font: "TajawalBold", sans-serif;
-$tajawalRegular-font: "TajawalRegular", sans-serif;
+$primaryFont: "OpenSans", sans-serif;
+$primaryFontBoldt: "OpenSansBold", sans-serif;
 $base-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 //-*----------  END FONTS BASE  ----------*/
 
 //%-*=====  End of GLOBAL STYLE SECTION  ======*-//
 
-$main-font: $tajawalRegular-font, $base-fonts;
+$main-font: $primaryFont, $base-fonts;
+$main-font-bold: $primaryFontBoldt, $base-fonts;
 
-$primary-color: #006335;
-$secondary-color: #333333;
-// $secondary-text-color: #4d4d4d;
-$secondary-text-color: gray;
+$primary-color: #50a433;
+$secondary-color: #707070;
+$third-text-color: #312783;
+$forth-text-color: #454545;
 
 // $primary-text-color: #2d2d2d;
 // $primary-background-color: white;
