--- a/src/assets/style/base/_global-style.scss
+++ b/src/assets/style/base/_global-style.scss
@@ -1,5 +1,4 @@
 @import "../abstract/mixins";
-@import "node_modules/react-modal-video/scss/modal-video.scss";
 :root {
     font-size: 16px;
 
@@ -25,8 +24,6 @@ body {
     // user-select: none;
     color: $primary-color;
     scroll-behavior: smooth;
-    direction: rtl;
-    text-align: right;
     &::-webkit-scrollbar {
         width: 0.4rem;
     }
@@ -39,11 +36,10 @@ body {
 
 ul {
     list-style: none;
+    padding: 0;
 }
 
-p {
-    line-height: 1.6;
-}
+
 
 a {
     text-decoration: none !important;
@@ -147,7 +143,10 @@ button:focus,
 .clickable {
     cursor: pointer;
 }
-
+.flex{
+    display: flex;
+    align-items: center;
+}
 .primary-color {
     color: $primary-color;
 }
@@ -195,7 +194,7 @@ button:focus,
     border: 0;
 
     &:disabled {
-        background-color: $secondary-text-color;
+        background-color: $secondary-color;
     }
 }
 
