--- a/src/assets/style/components/blocks/_header.scss
+++ b/src/assets/style/components/blocks/_header.scss
@@ -1,248 +1,276 @@
 @import "../../abstract/mixins";
-.offcanvas {
-    &.offcanvas-start {
-        width: 70%;
-        max-width: 300px;
-    }
-
-    .offcanvas-body {
-        background-color: $primary-color !important;
-    }
-    .sideMenu-list {
-        padding: 0;
-        li {
-            padding: 10px 5px;
-            cursor: pointer;
-
-            &:hover {
-                background-color: rgba(0, 0, 0, 0.2);
-                a {
-                    color: white;
-                }
-            }
-
-            a {
-                color: white;
-                display: flex;
-                align-items: center;
-                column-gap: 15px;
-                .fa {
-                    font-size: 13px;
-                }
-            }
-            ul {
-                padding: 0;
-                padding-top: 10px;
-
-                li {
-                    padding: 5px 10px !important;
-                    a {
-                        margin-right: 5px;
-                        padding-right: 5px;
-                    }
-                }
-            }
-        }
-    }
-}
-
 .header {
-    padding: 15px 0 5px 0;
-    // font-family: $tajawalBold-font;
-    .header-content {
-        display: flex;
-        column-gap: 75px;
-        align-items: center;
-        .logo {
-            width: 110px;
-            object-fit: scale-down;
+    padding-top: 20px;
+    .header-contents {
+        padding: 10px 0;
+
+        a {
+            img {
+            }
         }
-        ul {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
+        .header-list {
             column-gap: 25px;
+            margin-left: 30px;
+            margin-bottom: 0;
             li {
-                margin: 0;
-                .dropdown {
-                    .dropdown-toggle {
-                        background-color: transparent !important;
-                        color: $secondary-color;
-
-                        font-size: 14px;
-                        transition: ease-in-out 0.3s;
-                        display: flex;
-                        align-items: baseline;
-                        column-gap: 5px;
-                        border: 0;
-                        margin-bottom: 5px;
-                        border-bottom: 2px solid transparent;
-                        border-radius: 0;
-                        font-weight: bold;
-                        &::after {
-                            display: none;
-                        }
-                        &:hover {
-                            color: $primary-color !important;
-                            transition: ease-in-out 0.3s;
-                            border-color: $primary-color;
-
-                            .fa {
-                                transition: ease-in-out 0.3s;
-                                color: $primary-color;
-                            }
-                        }
-                        .fa {
-                            color: $secondary-color;
-                            font-size: 13px;
-                        }
-                    }
-                    .dropdown-menu {
-                        inset: 0px auto auto auto !important;
-                        border-radius: 0;
-                        padding: 0;
-                        background-color: #eeeeee;
-                        .dropdown-item {
-                            color: $primary-color;
-                            border-bottom: 1px solid silver;
-                            font-weight: 500;
-                            padding: 5px 5px;
-                        }
-                    }
-                }
                 a {
-                    color: $secondary-color;
-
-                    font-size: 14px;
-                    transition: ease-in-out 0.3s;
-                    display: flex;
-                    align-items: baseline;
-                    column-gap: 5px;
-                    border-bottom: 2px solid transparent;
-                    padding-bottom: 5px;
+                    color: $primary-color;
                     font-weight: bold;
+                    transition: ease-in-out 0.3s;
 
                     &:hover {
-                        color: $primary-color !important;
-                        // background-color: $primary-color;
+                        color: $third-text-color;
                         transition: ease-in-out 0.3s;
-                        border-color: $primary-color;
+                    }
+                }
+            }
+        }
+        .cart-fav {
+            margin: auto;
+            column-gap: 20px;
+            .single-cart {
+                position: relative;
+                img {
+                    width: 25px;
+                    object-fit: scale-down;
+                }
+                span {
+                    position: absolute;
+                    background-color: $third-text-color;
+                    color: #fff;
+                    font-size: 11px;
+                    border-radius: 50%;
+                    min-width: 22px;
+                    height: 22px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    top: -7px;
+                    right: -10px;
+                    border: 2px solid #fff;
+                    font-weight: bold;
+                }
+            }
+        }
 
-                        .fa {
-                            filter: brightness(0);
-                            transition: ease-in-out 0.3s;
+        .user-auth-Buttons {
+            margin-left: auto;
+            font-weight: bold;
+            color: $secondary-color;
+
+            a {
+                color: $secondary-color;
+                transition: ease-in-out 0.3s;
+
+                &:hover {
+                    color: $primary-color;
+                    transition: ease-in-out 0.3s;
+                }
+            }
+        }
+
+        .user-dropdown {
+            column-gap: 10px;
+            img {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+            }
+            .dropdown {
+                button {
+                    background-color: transparent;
+                    border: 0;
+                    color: $primary-color;
+                    display: flex;
+                    align-items: center;
+                    padding: 0;
+                    &::after {
+                        margin-left: 16px;
+                    }
+                    div {
+                        text-align: left;
+                        span {
+                            font-size: 11px;
+                            margin-bottom: -3px;
+                            display: block;
+                        }
+                        p {
+                            margin: 0;
+                            font-weight: bold;
+                            color: $forth-text-color;
                         }
                     }
                 }
             }
         }
-
-        .header-lang {
-            margin-right: auto;
-            display: flex;
-            align-items: center;
-            column-gap: 20px;
-            div {
-                column-gap: 5px;
-                display: flex;
-                align-items: center;
-                img {
-                    max-width: 30px;
-                    cursor: pointer;
-                    object-fit: scale-down;
-                }
-            }
-        }
-        .menuIcon {
-            width: 30px;
-            height: 30px;
-            object-fit: scale-down;
-            display: none;
-        }
     }
-    .d-none-web {
+    // push menu start
+    .mobile-push-menu {
         display: none;
-    }
-    .mobile-search {
-        border: 1px solid #006332;
-        border-radius: 20px;
-        overflow: hidden;
-        margin: 0 !important;
-        .input-group-text {
-            background-color: #006332;
-            border-radius: 0 !important;
-            border: 0;
-            border-top: 0;
-            border-bottom: 0;
-            border-right: 0;
-            img {
-                width: 15px;
-                filter: brightness(400);
-            }
-        }
-        .form-control {
-            border: 0;
-        }
-    }
-    .web-search {
-        margin: auto !important;
-        margin-top: 10px !important;
-        max-width: 400px;
-        transition: ease-in-out 0.4s;
-    }
-}
-
-@include respond(laptop) {
-    .header .header-content {
-        column-gap: 35px;
+        color: $primary-color;
         ul {
-            column-gap: 15px;
+            padding: 0;
             li {
-                a {
-                    font-size: 13px;
+                div {
+                    padding-bottom: 10px;
                 }
             }
         }
     }
+
+    .bm-overlay {
+        top: 0;
+        left: 0;
+        z-index: 9888888 !important;
+    }
+
+    .bm-burger-button {
+        position: relative !important;
+        margin-right: auto;
+    }
+
+    .bm-menu-wrap {
+        top: 0;
+        left: 0;
+        z-index: 9999999999 !important;
+        width: 40% !important;
+        background-color: $primary-color;
+    }
+
+    .sideMenu_logo {
+        text-align: center;
+        background-color: #fff;
+
+        img {
+            margin: auto;
+            padding: 8px 0;
+        }
+
+        &:focus {
+            outline: none !important;
+        }
+    }
+
+    .sideMenu_List {
+        margin-top: 20px;
+        padding: 0 10px;
+
+        span,
+        a,
+        button {
+            display: block;
+            padding: 10px;
+            color: white !important;
+            text-align: left;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            span {
+                padding: 5px;
+                border-radius: 50px;
+                width: 35px;
+                height: 35px;
+                background-color: $primary-color;
+                display: inline-flex;
+                justify-content: center;
+                align-items: center;
+                border: 0;
+                font-size: 13px;
+                i {
+                    font-size: 10px;
+                    // margin-left: 20px;
+                    // margin-right: 3px;
+                }
+            }
+        }
+
+        span {
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+
+        li {
+            text-transform: capitalize;
+            border-bottom: 1px solid #ffffff6e;
+
+            &:not(:last-of-type) {
+                margin-bottom: 1rem;
+            }
+        }
+
+        button {
+            width: 100%;
+            text-align: left;
+            background: transparent;
+        }
+    }
+
+    .sideMenu_loginButtons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 10px;
+
+        span {
+            width: 50%;
+            text-align: center;
+            border: 0;
+
+            &:first-child {
+                padding-right: 5px;
+                border-right: 2px solid white;
+            }
+        }
+    }
+    // push menu end
 }
 
 @include respond(small-laptop) {
-    .header {
-        .header-content {
-            column-gap: 25px;
-            .logo {
-                width: 100px;
-            }
-            ul {
-                display: none;
-                column-gap: 10px;
-                li {
-                    a {
-                        font-size: 13px;
-                    }
-                }
-            }
+    .header .header-contents .header-list {
+        margin-left: 0;
+        column-gap: 15px;
+        a {
+            font-size: 15px;
+        }
+    }
+    .header .header-contents .user-auth-Buttons a {
+        font-size: 15px;
+    }
 
-            .header-lang {
-                display: none;
-                column-gap: 10px;
-                div {
-                    img {
-                        max-width: 25px;
-                    }
-                }
-            }
-            .menuIcon {
-                margin-right: auto;
-                display: block;
-            }
-            .d-none-web {
-                display: flex;
-            }
-        }
-        .web-search {
-            display: none;
-        }
+    .header a img {
+        max-width: 130px;
+    }
+    header .header-contents .cart-fav {
+        column-gap: 15px;
+    }
+    .header .header-contents .user-dropdown {
+        column-gap: 5px;
+    }
+    .header .header-contents .user-dropdown img {
+        width: 35px;
+        height: 35px;
+    }
+    .header .header-contents .user-dropdown .dropdown button::after {
+        margin-left: 10px;
+    }
+    .header .header-contents .user-dropdown .dropdown button div p {
+        font-size: 15px;
+    }
+
+    .header .header-contents {
+        justify-content: space-between;
+    }
+    .header .header-contents .header-list,
+    .cart-fav,
+    .user-auth-Buttons {
+        display: none;
+    }
+
+    .header .mobile-push-menu {
+        display: block;
+    }
+
+    .mobile-push-menu .bm-icon {
+        font-size: 22px;
     }
 }
