--- a/src/assets/style/components/blocks/_makUp.scss
+++ b/src/assets/style/components/blocks/_makUp.scss
@@ -14,7 +14,7 @@
             margin-bottom: 20px;
         }
         p {
-            color: $secondary-text-color;
+            color: $secondary-color;
         }
     }
 }
