Create About Block =>in home (9/2/2021)

--- a/src/assets/style/components/pages/home/_landing.scss
+++ b/src/assets/style/components/pages/home/_landing.scss
@@ -68,6 +68,8 @@
     column-gap: 15px;
     margin-bottom: -85px;
     box-shadow: 0 0 5px 0px silver;
+    position: relative;
+    z-index: 99;
     span {
         color: $secondary-color;
         font-weight: bold;
