Create Big title section (9/5/2021)

--- a/src/assets/style/components/blocks/_blocks.scss
+++ b/src/assets/style/components/blocks/_blocks.scss
@@ -1,6 +1,3 @@
 @import "./header";
-@import "./headerWithSlider";
-@import "./footer";
 @import "./input";
-@import "./mainCarousel";
-@import "./partnersBlock";
+@import "./product";
