--- a/src/assets/style/components/pages/home/_newTitle.scss
+++ b/src/assets/style/components/pages/home/_newTitle.scss
@@ -1,108 +1,8 @@
 .new-title {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
-.product {
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 0 5px 0 silver;
-    margin-bottom: 25px;
-}
-.product__header {
-    background-color: #f7f7f7;
-    padding: 20px;
-    position: relative;
-    text-align: center;
-    overflow: hidden;
-
-    .product__header__book-img {
-        width: 80%;
-        margin-bottom: -100px;
-    }
-    span {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        padding: 7px;
-        border-radius: 10px;
-        background-color: #fff;
-        justify-content: center;
-        cursor: pointer;
-        transition: ease-in-out 0.3s;
-        box-shadow: 0 0 3px 0 silver;
-
-        &:hover {
-            background-color: #d11919;
-            transition: ease-in-out 0.3s;
-
-            img {
-                filter: brightness(5);
-                transition: ease-in-out 0.3s;
-            }
-        }
-        img {
-            width: 20px;
-            transition: ease-in-out 0.3s;
-        }
-    }
-}
-.product__contents {
-    padding: 20px;
-    h3 {
-        color: $primary-color;
-        font-size: 1rem;
-        margin-bottom: 15px;
-    }
-    p {
-        color: $secondary-color;
-        margin-bottom: 1.5rem;
-        font-size: 12px;
-    }
-}
-.product--buttons {
-    justify-content: space-between;
-    div {
-        column-gap: 10px;
-        span {
-            &:first-child {
-                color: $third-text-color;
-                font-size: 18px;
-                font-weight: bolder;
-            }
-            &:last-child {
-                color: $secondary-color;
-                text-decoration: line-through;
-            }
-        }
-    }
-    .add-to-cart {
-        padding: 10px 20px;
-        column-gap: 10px;
-        justify-content: center;
-        font-size: 14px;
-        border-radius: 20px;
-        transition: ease-in-out 0.3s;
-        color: #fff;
-        background-color: #fff;
-        border: 1px solid $primary-color;
-
-        &:hover {
-            background-color: $primary-color;
-            transition: ease-in-out 0.3s;
-            img {
-                filter: brightness(5);
-            }
-        }
-        img {
-            transition: ease-in-out 0.3s;
-
-            width: 18px;
-        }
-    }
-}
-
-@include respond(laptop) {
-    .product__header .product__header__book-img {
-        width: 100%;
-        margin-bottom: -100px;
+@include respond(tablet) {
+    .new-title {
+        margin-bottom: 40px;
     }
 }
