create contact us Page  (9/5/2021)

--- a/src/assets/style/components/blocks/_header.scss
+++ b/src/assets/style/components/blocks/_header.scss
@@ -1,7 +1,7 @@
 @import "../../abstract/mixins";
 .header {
     padding-top: 10px;
-    position: absolute;
+    // position: absolute;
     z-index: 99;
     width: 100%;
     top: 0;
