--- a/src/assets/style/base/_global-style.scss
+++ b/src/assets/style/base/_global-style.scss
@@ -198,13 +198,12 @@ button:focus,
 
 .submit-button {
     display: block;
-    margin: auto;
     margin-bottom: 20px;
     background-color: $primary-color;
     color: #fff;
-    width: 80%;
-    border-radius: 5px;
-    padding: 3px;
+    min-width: 180px;
+    border-radius: 20px;
+    padding: 8px;
     transition: ease-in-out 0.4s;
     border: 1px solid $primary-color;
     &:hover {
@@ -340,7 +339,7 @@ button:focus,
     margin-bottom: 0 !important;
     padding: 5px 10px;
     background-color: #f9f9f9;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(204, 204, 204, 0.192);
     border-radius: 5px;
     color: $primary-color !important;
     font-weight: bold;
