Create The Blog section (9/5/2021)

--- a/src/assets/style/abstract/_variable.scss
+++ b/src/assets/style/abstract/_variable.scss
@@ -1,20 +1,22 @@
 @font-face {
-    font-family: OpenSans;
-    src: url(../../fonts/OpenSans-Regular.ttf);
-    font-display: swap;
+  font-family: OpenSans;
+  src: url(../../fonts/OpenSans-Regular.ttf);
+  font-display: swap;
 }
 
 @font-face {
-    font-family: OpenSansBold;
-    src: url(../../fonts/OpenSans-Bold.ttf);
-    font-display: swap;
+  font-family: OpenSansBold;
+  src: url(../../fonts/OpenSans-Bold.ttf);
+  font-display: swap;
 }
 
 //-*----------  START FONTS BASE  ----------*/
 
 $primaryFont: "OpenSans", sans-serif;
 $primaryFontBoldt: "OpenSansBold", sans-serif;
-$base-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$base-fonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 //-*----------  END FONTS BASE  ----------*/
 
@@ -24,6 +26,7 @@ $main-font: $primaryFont, $base-fonts;
 $main-font-bold: $primaryFontBoldt, $base-fonts;
 
 $primary-color: #50a433;
+
 $secondary-color: #707070;
 $third-text-color: #312783;
 $forth-text-color: #454545;
