--- a/src/assets/style/components/pages/home/_home.scss
+++ b/src/assets/style/components/pages/home/_home.scss
@@ -1,6 +1,6 @@
-@import "../../../abstract/mixins";
 @import "./landing";
 @import "./aboutBlock";
 @import "./bigSale";
 @import "./newTitle";
 @import "./bigTitle";
+@import "./theBlog";
