--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,3 +1,5 @@
+@import "./abstract/mixins";
+
 @import "./base/global-style";
 @import "./components/blocks/blocks";
 @import "./components/pages/pages";
