--- a/src/assets/style/components/pages/_pages.scss
+++ b/src/assets/style/components/pages/_pages.scss
@@ -1,3 +1,5 @@
 @import "./home/home";
 @import "./contactUs/contactUs.scss";
 @import "./auth/auth.scss";
+@import "./cart/cart";
+@import "./myLocations/location";
