--- a/src/assets/style/components/blocks/_product.scss
+++ b/src/assets/style/components/blocks/_product.scss
@@ -28,7 +28,7 @@
         box-shadow: 0 0 3px 0 silver;
 
         &:hover {
-            background-color: #d11919;
+            background-color: #ff485a;
             transition: ease-in-out 0.3s;
 
             img {
