--- a/src/assets/style/components/pages/contactUs/contactUs.scss
+++ b/src/assets/style/components/pages/contactUs/contactUs.scss
@@ -16,13 +16,13 @@
     padding-top: 20px;
     font-weight: bold;
 }
-.contact-us__contents {
+.form-box {
     position: relative;
     background-color: #fff;
     padding: 30px 50px;
     border-radius: 20px;
     box-shadow: 0 0 2px 0 silver;
-    img {
+    .main-form-img {
         position: absolute;
         top: -100px;
         right: -50px;
@@ -94,14 +94,14 @@
 // for favorites page end
 
 @include respond(laptop) {
-    .contact-us__contents img {
+    .form-box .main-form-img {
         right: -15px;
         width: 480px;
     }
 }
 @include respond(small-laptop) {
-    .auth .contact-us__contents img,
-    .contact-us__contents img {
+    .auth .form-box .main-form-img,
+    .form-box .main-form-img {
         top: -100px;
         right: -20px;
         width: 315px !important;
@@ -120,18 +120,18 @@
     .contact-details div .addresses-list li {
         margin-bottom: 15px;
     }
-    .contact-us__contents img {
+    .form-box .main-form-img {
         top: -60px;
         right: -20px;
-        width: 250px;
+        width: 250px !important;
     }
 }
 
 @include respond(phone) {
-    .contact-us__contents img {
+    .form-box .main-form-img {
         top: -25px;
         right: -20px;
-        width: 150px;
+        width: 150px !important;
     }
     .page-title {
         font-size: 16px;
