--- a/src/assets/style/components/blocks/_product.scss
+++ b/src/assets/style/components/blocks/_product.scss
@@ -14,6 +14,7 @@
     .product__header__book-img {
         width: 80%;
         margin-bottom: -100px;
+        cursor: pointer;
     }
     span {
         position: absolute;
@@ -48,6 +49,7 @@
         color: $primary-color;
         font-size: 1rem;
         margin-bottom: 15px;
+        cursor: pointer;
     }
     p {
         color: $secondary-color;
