create My Order Page & order Details Page (9/7/2021)

--- a/src/assets/style/components/pages/_pages.scss
+++ b/src/assets/style/components/pages/_pages.scss
@@ -4,3 +4,4 @@
 @import "./cart/cart";
 @import "./myLocations/location";
 @import "./productDetails/productdetails";
+@import "./myOrders/myOrders";
