--- a/src/assets/style/components/pages/myLocations/_location.scss
+++ b/src/assets/style/components/pages/myLocations/_location.scss
@@ -72,6 +72,7 @@
         margin-top: 30px;
         border-radius: 5px;
     }
+    textarea,
     .form-control {
         font-weight: 100 !important;
     }
