fixed some problem (9/7/2021)

--- a/src/assets/style/components/blocks/_product.scss
+++ b/src/assets/style/components/blocks/_product.scss
@@ -16,6 +16,9 @@
         margin-bottom: -100px;
         cursor: pointer;
     }
+    i {
+        color: #ff485a;
+    }
     span {
         position: absolute;
         top: 20px;
@@ -29,8 +32,8 @@
         box-shadow: 0 0 3px 0 silver;
 
         &:hover {
-            background-color: #ff485a;
-            transition: ease-in-out 0.3s;
+            // background-color: #ff485a;
+            // transition: ease-in-out 0.3s;
 
             img {
                 filter: brightness(5);
