--- a/src/assets/style/components/blocks/_header.scss
+++ b/src/assets/style/components/blocks/_header.scss
@@ -1,6 +1,6 @@
 @import "../../abstract/mixins";
 .header {
-    padding-top: 10px;
+    padding-top: 20px;
     // position: absolute;
     z-index: 99;
     width: 100%;
@@ -19,7 +19,7 @@
             li {
                 a {
                     color: $primary-color;
-                    font-weight: bold;
+                    font-family: $main-font-bold;
                     transition: ease-in-out 0.3s;
 
                     &:hover {
