edit-fonts-and-sizes (9/8-2021)

--- a/src/assets/style/components/pages/about/_aboutPage.scss
+++ b/src/assets/style/components/pages/about/_aboutPage.scss
@@ -23,6 +23,9 @@
       font-family: $main-font-bold;
     }
   }
+  .page-title {
+    padding-left: 30px;
+  }
 }
 @include respond(smallDesktop) {
   .about-page {
