--- a/src/assets/style/components/blocks/_agentOf.scss
+++ b/src/assets/style/components/blocks/_agentOf.scss
@@ -1,34 +1,35 @@
 .home {
-    .agent-of {
-        background-color: #fbfbfb;
-    }
+  .agent-of {
+    background-color: #fbfbfb;
+  }
 }
 
 .agent-of {
-    padding: 40px 0;
-    margin-top: 100px;
-    // margin-bottom: 50px;
-    h3 {
-        color: $primary-color;
-        font-weight: bold;
-        margin-bottom: 30px;
-    }
+  padding: 40px 0;
+  margin-top: 100px;
+  // margin-bottom: 50px;
+  h3 {
+    color: $primary-color;
+    font-family: $main-font-bold;
+    margin-bottom: 46px;
+    text-transform: capitalize;
+  }
 }
 .agent-of__item {
-    padding: 20px;
-    border: 2px solid #e9e9e9;
-    border-radius: 20px;
-    background-color: #fff;
-    img {
-        width: 100%;
-        object-fit: scale-down;
-    }
+  padding: 20px;
+  border: 2px solid #e9e9e9;
+  border-radius: 20px;
+  background-color: #fff;
+  img {
+    width: 100%;
+    object-fit: scale-down;
+  }
 }
 
 @include respond(large-phone) {
-    .agent-of__item {
-        max-width: 300px;
-        margin: auto;
-        margin-bottom: 20px;
-    }
+  .agent-of__item {
+    max-width: 300px;
+    margin: auto;
+    margin-bottom: 20px;
+  }
 }
