--- a/src/assets/style/components/pages/home/_bigSale.scss
+++ b/src/assets/style/components/pages/home/_bigSale.scss
@@ -63,6 +63,7 @@
   .add-to-cart {
     color: #fff;
     background-color: $primary-color;
+    text-transform: capitalize;
 
     &:hover {
       background-color: $third-text-color;
@@ -72,7 +73,7 @@
   .add-to-fav {
     color: $secondary-color;
     transition: ease-in-out 0.3s;
-
+    text-transform: capitalize;
     &:hover {
       background-color: $third-text-color;
       transition: ease-in-out 0.3s;
