update-signup.jsx and auth.scss (9/9/2021)

--- a/src/assets/style/components/pages/auth/auth.scss
+++ b/src/assets/style/components/pages/auth/auth.scss
@@ -16,8 +16,9 @@
     margin-top: 50px;
   }
   p {
-    color: $secondary-color;
+    color: #cecece;
     font-size: 20px;
+
     a {
       color: $primary-color;
       font-weight: bold;
