--- a/src/assets/style/components/pages/auth/auth.scss
+++ b/src/assets/style/components/pages/auth/auth.scss
@@ -55,6 +55,9 @@
     border: 1px solid #bcbcbc;
     height: 45px;
     border-radius: 10px;
+
+    padding: 8px 15px;
+    justify-content: space-between;
     .form-select {
       border: none;
       color: #bcbcbc;
@@ -70,6 +73,13 @@
         color: #bcbcbc;
         font-size: 18px;
       }
+    }
+    i {
+      color: $primary-color;
+      margin: auto 0px;
+    }
+    .password-input {
+      width: 90%;
     }
   }
   // SignUp page Style End
